[package]
name = "typst-video"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
fontdb = "0.16.2"
typst = "0.11.1"
comemo = "0.4.0"
dirs = "5.0.1"
typst-assets = "0.11.1"
video-rs = { version = "0.8.1", features = ["ndarray"] }
typst-render = "0.11.1"
ndarray = "0.15.6"
iced = { version = "0.12.1", features = ["image", "smol"] }
notify = "6.0.1"
notify-debouncer-mini = "0.4.1"
